--- a/_pages/cv.html
+++ b/_pages/cv.html
@@ -35,7 +35,7 @@ author_profile: true
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.10.377/pdf.min.js"></script>
     <script>
-        const url = 'your-pdf-file.pdf'; // Replace with your PDF file URL
+        const url = 'files/Parsa.pdf'; // Replace with your PDF file URL
 
         let pdfDoc = null,
             pageNum = 1,
