--- a/_pages/cv.html
+++ b/_pages/cv.html
@@ -35,7 +35,7 @@ author_profile: true
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.10.377/pdf.min.js"></script>
     <script>
-        const url = 'https://github.com/Parsa744/Parsa744.github.io/blob/fc174751c9584df1dca235730ecdf269721779e6/files/Parsa.pdf'; // Replace with your PDF file URL
+        const url = 'https://github.com/Parsa744/Parsa744.github.io/raw/fc174751c9584df1dca235730ecdf269721779e6/files/Parsa.pdf';
 
         let pdfDoc = null,
             pageNum = 1,
