--- a/_pages/cv.html
+++ b/_pages/cv.html
@@ -4,3 +4,36 @@ title: "CV"
 permalink: /cv/
 author_profile: true
 ---
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>CV Display</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            background-color: #f0f0f0;
+        }
+        .pdf-container {
+            width: 80%;
+            height: 90vh;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+        }
+    </style>
+</head>
+<body>
+    <div class="pdf-container">
+        <iframe src="https://github.com/Parsa744/Parsa744.github.io/blob/master/files/Parsa.pdf" width="100%" height="100%">
+            Your browser does not support PDFs. Please download the PDF to view it: 
+            <a href="https://github.com/Parsa744/Parsa744.github.io/blob/master/files/Parsa.pdf">Download CV</a>.
+        </iframe>
+    </div>
+</body>
+</html>
