--- a/_pages/cv.html
+++ b/_pages/cv.html
@@ -30,9 +30,9 @@ author_profile: true
 </head>
 <body>
     <div class="pdf-container">
-        <iframe src="https://github.com/Parsa744/Parsa744.github.io/blob/master/files/Parsa.pdf" width="100%" height="100%">
+        <iframe src="https://raw.githubusercontent.com/Parsa744/Parsa744.github.io/master/files/Parsa.pdf" width="100%" height="100%">
             Your browser does not support PDFs. Please download the PDF to view it: 
-            <a href="https://github.com/Parsa744/Parsa744.github.io/blob/master/files/Parsa.pdf">Download CV</a>.
+            <a href="https://raw.githubusercontent.com/Parsa744/Parsa744.github.io/master/files/Parsa.pdf">Download CV</a>.
         </iframe>
     </div>
 </body>
