--- a/_pages/cv.html
+++ b/_pages/cv.html
@@ -30,10 +30,10 @@ author_profile: true
 </head>
 <body>
     <div class="pdf-container">
-        <iframe src="https://raw.githubusercontent.com/Parsa744/Parsa744.github.io/master/files/Parsa.pdf" width="100%" height="100%">
-            Your browser does not support PDFs. Please download the PDF to view it: 
-            <a href="https://raw.githubusercontent.com/Parsa744/Parsa744.github.io/master/files/Parsa.pdf">Download CV</a>.
-        </iframe>
+        <object data="https://raw.githubusercontent.com/Parsa744/Parsa744.github.io/master/files/Parsa.pdf" type="application/pdf" width="100%" height="100%">
+            <p>Your browser does not support PDFs. Please download the PDF to view it: 
+            <a href="https://raw.githubusercontent.com/Parsa744/Parsa744.github.io/master/files/Parsa.pdf">Download CV</a>.</p>
+        </object>
     </div>
 </body>
 </html>
