--- a/_pages/cv.html
+++ b/_pages/cv.html
@@ -15,13 +15,13 @@ author_profile: true
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #f4f4f4;
-            color: #333;
+            background-color: #ffffff; /* White background */
+            color: #000000; /* Black text */
         }
 
         header {
-            background-color: #4CAF50;
-            color: white;
+            background-color: #000000; /* Black background */
+            color: #ffffff; /* White text */
             padding: 10px 0;
             text-align: center;
         }
@@ -36,14 +36,14 @@ author_profile: true
 
         h2 {
             font-size: 24px;
-            color: #4CAF50;
+            color: #000000; /* Black text for subheadings */
         }
 
         section {
             max-width: 800px;
             margin: 20px auto;
             padding: 20px;
-            background-color: white;
+            background-color: #ffffff; /* White background */
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         }
 
@@ -63,8 +63,8 @@ author_profile: true
         footer {
             text-align: center;
             padding: 20px 0;
-            background-color: #4CAF50;
-            color: white;
+            background-color: #000000; /* Black background */
+            color: #ffffff; /* White text */
         }
     </style>
 </head>
@@ -137,10 +137,6 @@ author_profile: true
             </ul>
         </div>
     </section>
-
-    <footer>
-        <p>&copy; 2024 Parsa Hariri - All Rights Reserved</p>
-    </footer>
 
 </body>
 </html>
