--- a/_pages/portfolio.html
+++ b/_pages/portfolio.html
@@ -1,14 +1,14 @@
 ---
 layout: archive
-title: "Portfolio"
-permalink: /portfolio/
-author_profile: true
+title: "Projects"
+permalink: /Projects/
+author_Projects: true
 ---
 
 {% include base_path %}
 
 
-{% for post in site.portfolio %}
+{% for post in site.Projects %}
   {% include archive-single.html %}
 {% endfor %}
 
