--- a/_pages/projects.html
+++ b/_pages/projects.html
@@ -1,7 +1,7 @@
 ---
 layout: archive
 title: "Projects"
-permalink: /Projects/
+permalink: /projects/
 author_Projects: true
 ---
 
@@ -12,3 +12,4 @@ author_Projects: true
   {% include archive-single.html %}
 {% endfor %}
 
+123
