--- a/_projects/masterProjects.html
+++ b/_projects/masterProjects.html
@@ -1,2 +1,9 @@
-...
+---
+title: "Masyter's project"
+collection: Projects
+type: "Projects"
+permalink: /Projects/2024-10-01-Projects-1
+date: 2024-10-01
+---
+Image segmentation
 <img src="images/workFlow.png">
