--- a/_projects/masterProjects.html
+++ b/_projects/masterProjects.html
@@ -1,7 +1,7 @@
 ---
 title: "Masyter's project"
-collection: Projects
-type: "Projects"
+collection: projects
+type: "projects"
 permalink: /Projects/2024-10-01-Projects-1
 date: 2024-10-01
 ---
