--- a/_pages/projects.html
+++ b/_pages/projects.html
@@ -2,14 +2,16 @@
 layout: archive
 title: "Projects"
 permalink: /projects/
-author_Projects: true
+author_profile: true
 ---
+{% if site.talkmap_link == true %}
 
-{% include base_path %}
+<p style="text-decoration:underline;"><a href="/talkmap.html">See a map of all the places I've given a talk!</a></p>
 
+{% endif %}
 
-{% for post in site.Projects %}
-  {% include archive-single.html %}
+{% for post in site.talks reversed %}
+  {% include archive-single-projects.html %}
 {% endfor %}
 
 123
