--- a/_pages/projects.html
+++ b/_pages/projects.html
@@ -10,7 +10,7 @@ author_profile: true
 
 {% endif %}
 
-{% for post in site.talks reversed %}
+{% for post in site.projects reversed %}
   {% include archive-single-projects.html %}
 {% endfor %}
 
