--- a/assets/html/spatial_omics_infographic.html
+++ b/assets/html/spatial_omics_infographic.html
@@ -320,7 +320,7 @@
     </main>
     
     <footer class="text-center py-6 border-t border-teal-900">
-        <p class="text-sm text-gray-500">Infographic generated based on the "Spatial Metabolomics & Spatial Transcriptomics Data Integration" Deep Research Report.</p>
+        <p class="text-sm text-gray-500">Spatial Metabolomics & Spatial Transcriptomics Data Integration.</p>
     </footer>
 
     <script>
